--- a/src/style.css
+++ b/src/style.css
@@ -28,13 +28,16 @@ button:hover {
   font-weight: 600;
 }
 
-#game-cards {
-  display: flex;
-}
-
 #result button {
   margin-top: 10px;
   border: 2px solid hotpink;
   border-radius: 50%;
   background-color: rgba(247, 152, 152, 0.3);
+}
+#result p {
+  margin-top: 10px;
+  color: hotpink;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
 }
