--- a/src/style.css
+++ b/src/style.css
@@ -31,12 +31,30 @@ h1 {
   display: none;
 }
 
-#center {
+#games-button {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 100px;
+  left: 30px;
+}
+
+.selected-button {
+  border: 2px solid white;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#center {
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+#rock-paper-scissors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #result button {
