--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 #games-button {
@@ -49,6 +49,12 @@ h1 {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+#rock-paper-scissors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #result button {
